Fixed minor layout issue

--- a/client/src/components/addPet/addPet.css
+++ b/client/src/components/addPet/addPet.css
@@ -17,14 +17,22 @@
   color: #006e90;
 }
 
-.add-pet-anchor-one {
+.add-pet-btn-one {
   padding-left: 5px;
   padding-right: 10px;
+  border-top: none;
+  border-bottom: none;
   border-right: 1px solid lightgray;
+  border-left: none;
+  background-color: transparent;
 }
 
-.add-pet-anchor-two {
+.add-pet-btn-two {
   padding-left: 10px;
   padding-right: 5px;
   border-left: 1px solid lightgray;
+  border-right: none;
+  background-color: transparent;
+  border-top: none;
+  border-bottom: none;
 }
