--- a/client/src/components/settings/settings.css
+++ b/client/src/components/settings/settings.css
@@ -8,12 +8,12 @@
   background-color: transparent;
   border-radius: 5px;
 }
-input, select {
+.settings input, .settings select {
   margin-left: 20px;
   margin-bottom: 10px;
 }
 
-label {
+.settings label {
   display: inline-block;
   width: 140px;
   text-align: right;
